#:schema https://json.schemastore.org/pyproject.json

[project]
name = "pyarrow-stubs"
version = "17.0"
description = "Type annotations for pyarrow"
authors = [{ name = "ZhengYu, Xu", email = "zen-xu@outlook.com" }]
license = "BSD-2-Clause"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8,<4"
dependencies = ["pyarrow >=17"]

[project.urls]
homepage   = "https://github.com/zen-xu/pyarrow-stubs"
repository = "https://github.com/zen-xu/pyarrow-stubs.git"
issues     = "https://github.com/zen-xu/pyarrow-stubs/issues"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["pyarrow-stubs"]

[tool.pixi.project]
channels  = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
pyarrow-stubs = { path = ".", editable = true }
ipython       = "*"
scipy         = "*"
pre-commit    = "*"
mypy          = ">=1.11"
ruff          = ">=0.5"
types-cffi    = "*"
pandas-stubs  = "*"
hatchling     = "*"

[tool.ruff]
fix            = true
line-length    = 99
target-version = "py38"

[tool.ruff.lint]
extend-select = [
  "I",   # isort
  "N",   # pep8-naming
  "PYI", # flake8-pyi
]
ignore = [
  "PYI015", # assignment-default-in-stub
  "PYI011", # typed-argument-default-in-stub
  "N818",   # error-suffix-on-exception-name
]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
explicit_package_bases = true
files                  = "pyarrow-stubs"
namespace_packages     = true
show_error_codes       = true
disable_error_code     = ["overload-overlap", "import-not-found"]
